--- a/tesi.tex
+++ b/tesi.tex
@@ -91,8 +91,9 @@ stringstyle=\footnotesize,
 \tableofcontents
 
 \include{introduzione}
-\include{dropper}
 \include{exploit}
+\include{architettura}
+\include{implementazione}
 \include{conclusioni}
 
 %% \clearpage{\pagestyle{empty}\cleardoublepage}
