--- a/conclusioni.tex
+++ b/conclusioni.tex
@@ -60,7 +60,7 @@ come l'ordine nel quale effettuare alcune azioni (i gadget) per
 raggiungere un dato stato del sistema, si presta naturalmente ad una
 traduzione in un problema di planning . È stata esplorata questa
 strada, traducendo il problema, una volta estratta la semantica dei
-gadget, nel linguaggio PDDL 2.1 \cit{pddl-1997,fox-03}. La strategia
+gadget, nel linguaggio PDDL 2.1 \cite{pddl-1997,fox-03}. La strategia
 di modellizzazione utilizzata in questo primo approccio è riportata in
 \ref{sec:pddl}. Le ultime problematiche da affrontare, nella nostra
 panoramica dal basso verso l'alto, sono la scelta di una tecnica di
@@ -82,7 +82,7 @@ operazioni per applicare quella tecnica. In questa fase i vantaggi,
 sopratutto pensando a tecniche non ancora implementate come \emph{got
   dereferencing}, dell'utilizzo di un planner sembrano ancora più
 rilevanti. Lo strumento è stato testato su alcuni livelli di
-exploit-exercise\cit{exploit-exercise} e su alcune delle bin-utils
+exploit-exercise\cite{exploit-exercise} e su alcune delle bin-utils
 (ls, echo, mv), riuscendo a ritornare payload funzionanti una volta
 iniettati nello stack.
 
