--- a/tesi.bib
+++ b/tesi.bib
@@ -56,6 +56,13 @@ url={http://www.muppetlabs.com/~breadbox/software/elfkickers.html},
     year = 1997
 }
 
+@MISC{stackpatch,
+    author = {Solar Designer},
+url={http://www.openwall.com/linux},
+    year = {}
+}
+
+
 @inproceedings{Shacham-2007,
  author = {Shacham, Hovav},
  title = {The Geometry of Innocent Flesh on the Bone: Return-into-libc Without Function Calls (on the x86)},
@@ -275,6 +282,14 @@ year={1991}
   year =         {1966},
 }
 
+@misc{solar-return-to-libc,
+author = {Solar Designer},
+title = {return-to-libc},
+year = {1997},
+month = {August},
+}
+
+
 @inbook{Thacher-1970,
 author = {J.W. Thacher},
 title = {Essays on Cellular Automata},
@@ -282,6 +297,7 @@ pages = {103-131},
 publisher = {University of Illinois Press, Champaign},
 year = {1970},
 }
+
 @article{Merkle&Worsch-2002,
 author = {D. Merkle and T. Worsch},
 title = {Formal language recognition by stochastic cellular automata},
