chap explot finito

--- a/architettura.tex
+++ b/architettura.tex
@@ -1,4 +1,4 @@
-\chapter{Architettura}
+\chapter{Architettura di Dropper}
 \label{cap:architettura}
 
 In questo capitolo si descrive l'architettura alla quale si sta
