--- a/conclusioni.tex
+++ b/conclusioni.tex
@@ -1,16 +1,16 @@
 \chapter{Conclusioni}
 
-Lo sviluppo, sebbene parziale, di uno strumento come dropper mi ha
-permesso di studiare ed esplorare problematiche interessanti e
-complesse. Uno strumento che riesce infatti ad analizzare un file
-binario e da esso estrarne in maniera automatica le informazioni
-necessarie per poter costruire un payload funzionante implica la
-risoluzione di diverse problematiche che abbracciano più aree
-dell'informatica. In particolare in questo lavoro alcuni strumenti
-propri dell'intelligenza artificiale hanno giocato un ruolo cruciale
-rendendo evidente l'apporto che questa disciplina può dare all'area
-della sicurezza informatica in generale. Tra le problematiche più
-rilevanti nello sviluppo di uno strumento come dropper elenchiamo:
+Lo sviluppo di uno strumento come dropper mi ha permesso di studiare
+ed esplorare problematiche interessanti e complesse. Uno strumento che
+riesce infatti ad analizzare un file binario e da esso estrarne in
+maniera automatica le informazioni necessarie per poter costruire un
+payload funzionante implica la risoluzione di diverse problematiche
+che abbracciano più aree dell'informatica. In particolare in questo
+lavoro alcuni strumenti propri dell'intelligenza artificiale hanno
+giocato un ruolo cruciale rendendo evidente l'apporto che questa
+disciplina può dare all'area della sicurezza informatica in
+generale. Tra le problematiche più rilevanti nello sviluppo di uno
+strumento come dropper elenchiamo:
 
 \begin{enumerate}
 \item L'estrapolazione della semantica dei singoli gadget
@@ -60,7 +60,7 @@ come l'ordine nel quale effettuare alcune azioni (i gadget) per
 raggiungere un dato stato del sistema, si presta naturalmente ad una
 traduzione in un problema di planning . È stata esplorata questa
 strada, traducendo il problema, una volta estratta la semantica dei
-gadget, nel linguaggio PDDL 2.1 \cite{pddl-1997,fox-03}. La strategia
+gadget, nel linguaggio PDDL 2.1 \cite{pddl-97,fox-03}. La strategia
 di modellizzazione utilizzata in questo primo approccio è riportata in
 \ref{sec:pddl}. Le ultime problematiche da affrontare, nella nostra
 panoramica dal basso verso l'alto, sono la scelta di una tecnica di
