--- a/implementazione.tex
+++ b/implementazione.tex
@@ -1,4 +1,4 @@
-\chapter{Implementazione attuale}
+\chapter{Implementazione di Dropper}
 \label{cap:implementazione}
 In questo capito si farà un'analisi dell'attuale stato di sviluppo di dropper.
 
